--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,89 @@ p {
 
 /*
 =============== 
-
+style of sign up
 ===============
 */
+
+.services {
+  display: none;
+}
+
+main {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  background: var(--clr-white);
+  padding: 2.5rem;
+  border-radius: var(--radius);
+  width: 90vw;
+  max-width: 1170px;
+}
+
+.form h2 {
+  margin-bottom: 2rem;
+  font-weight: 500;
+}
+
+.form-control {
+  margin-bottom: 2rem;
+}
+
+.form-control label {
+  display: block;
+  text-transform: capitalize;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+
+.form-input {
+  border: 1px solid var(--clr-grey-9);
+  border-radius: var(--radius);
+  padding: 1.25rem;
+  width: 100%;
+  color: var(--clr-grey-3);
+  font-size: 1rem;
+}
+
+.form-input::placeholder {
+  color: var(--clr-grey-5);
+  text-transform: capitalize;
+}
+
+.updates {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+input[type='checkbox'] {
+  border: 2px solid #222;
+  width: 1.75rem;
+  height: 1.75rem;
+}
+
+.updates p {
+  margin-bottom: 0;
+  text-transform: capitalize;
+  color: var(--clr-grey-5);
+}
+
+.btn {
+  background: var(--clr-grey-5);
+  display: block;
+  width: 100%;
+  color: var(--clr-white);
+  border-radius: var(--radius);
+  border-color: transparent;
+  padding: 1.25rem 0;
+  text-transform: capitalize;
+  font-size: 1rem;
+  cursor: pointer;
+}
