--- a/styles.css
+++ b/styles.css
@@ -221,3 +221,41 @@ input[type='checkbox'] {
   font-size: 1rem;
   cursor: pointer;
 }
+
+@media screen and (min-width: 992px) {
+  .services {
+    display: block;
+    padding: 4rem;
+    background: linear-gradient(135deg, #ba91e9 0%, #6d58ce 100%);
+    border-radius: var(--radius);
+    color: var(--clr-black);
+    min-height: 785px;
+  }
+
+  .service {
+    max-width: 240px;
+    margin-bottom: 2.5rem;
+  }
+
+  .icon {
+    width: 2rem;
+    height: 2rem;
+    display: block;
+    border-radius: 50%;
+    background: rgba(255);
+    display: grid;
+    place-items: center;
+    margin-bottom: 1.75rem;
+  }
+  .service h4 {
+    font-weight: 500;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 4rem;
+    align-items: center;
+  }
+  }
+}
